backend(auth): register and log in endpoints added